--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,8 +22,9 @@ jobs:
         node-version: '12.x'
     - run: npm install
     - run: npm run build:prod
-    - uses: w9jds/firebase-action@v1.3.0
+    - name: Deploy to Firebase
+      uses: w9jds/firebase-action@v1.3.0
       with:
-        args: deploy --only hosting
+        args: deploy --only hosting --project tg-corona-app
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
